@@ -1,3 +1,9 @@
+Mon Jan 10 01:02:41 HKT 2006 William Brack <wbrack@mmm.com.hk>
+
+	* doc/xml.html, doc/FAQ.html: added an FAQ under Developer for
+	  setting up a "private" library (after some list posts about
+	  people having trouble doing it)
+
 Sat Jan  8 23:04:10 CET 2005 Daniel Veillard <daniel@veillard.com>
 
 	* xmlregexp.c: fixing behaviour for xmlRegExecErrInfo in case of
